--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="/" class="logo">
+								<a href="./index.html" class="logo">
 									<img src="./img/logo.png" alt="">
 								</a>
 							</div>
@@ -75,7 +75,7 @@
 							<div class="header-search">
 								<form>
 									<select class="input-select">
-										<option value="0">Todas</option>
+										<option value="0">Categorias</option>
 										<option value="1">Category 01</option>
 										<option value="1">Category 02</option>
 									</select>
@@ -93,7 +93,7 @@
 								<div>
 									<a href="wishlist.html">
 										<i class="fa fa-heart-o"></i>
-										<span>Deseados</span>
+										<span>Lista de Deseados</span>
 										<div class="qty">2</div>
 									</a>
 								</div>
@@ -103,7 +103,7 @@
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 										<i class="fa fa-shopping-cart"></i>
-										<span>Compras</span>
+										<span>Carrito de Compras</span>
 										<div class="qty">3</div>
 									</a>
 									<div class="cart-dropdown">
@@ -1098,6 +1098,7 @@
 		<script src="js/nouislider.min.js"></script>
 		<script src="js/jquery.zoom.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/nostra.js"></script>
 
 	</body>
 </html>
