--- a/login.html
+++ b/login.html
@@ -224,17 +224,19 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
-						<h3 class="text-center">Login</h3>
+						<h3 class="text-center">Acceder</h3>
 						<form id="loginForm">
 							<div class="form-group">
-								<label for="username">Username or Email</label>
+								<label for="username">Nombre o Email</label>
 								<input type="text" class="form-control" id="username" required>
 							</div>
 							<div class="form-group">
-								<label for="password">Password</label>
+								<label for="password">Contraseña</label>
 								<input type="password" class="form-control" id="password" required>
 							</div>
-							<button type="submit" class="btn btn-primary btn-block">Login</button>
+							<div class="text-center">
+								<button type="submit" class="btn btn-primary btn-block" style="background-color: #D10024; color: #FFF; border: none;">Login</button>
+							</div>
 							<div id="loginMessage" class="text-danger text-center" style="margin-top:10px;"></div>
 						</form>
 					</div>
