--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+						<li><a href="login.html"><i class="fa fa-user-o"></i> My Account</a></li>
 					</ul>
 				</div>
 			</div>
@@ -170,7 +170,7 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#">Home</a></li>
 						<li><a href="#">Hot Deals</a></li>
 						<li><a href="#">Categories</a></li>
 						<li><a href="#">Laptops</a></li>
@@ -235,7 +235,7 @@
 								<input type="password" class="form-control" id="password" required>
 							</div>
 							<div class="text-center">
-								<button type="submit" class="btn btn-primary btn-block" style="background-color: #D10024; color: #FFF; border: none;">Login</button>
+								<button type="submit" class="btn btn-primary btn-block" style="background-color: #D10024; color: #FFF; border: none;">Acceder</button>
 							</div>
 							<div id="loginMessage" class="text-danger text-center" style="margin-top:10px;"></div>
 						</form>
