--- a/blank.html
+++ b/blank.html
@@ -34,7 +34,7 @@
  		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  		<![endif]-->
 
-    </head>
+  </head>
 	<body>
 		<!-- HEADER -->
 		<header>
@@ -63,7 +63,7 @@
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="#" class="logo">
+								<a href="/" class="logo">
 									<img src="./img/logo.png" alt="Logo de la empresa">
 								</a>
 							</div>
@@ -118,7 +118,6 @@
 												</div>
 												<button class="delete"><i class="fa fa-close"></i></button>
 											</div>
-
 											<div class="product-widget">
 												<div class="product-img">
 													<img src="./img/product02.png" alt="">
@@ -353,6 +352,7 @@
 		<script src="js/nouislider.min.js"></script>
 		<script src="js/jquery.zoom.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/nostra.js"></script>
 
 	</body>
 </html>
