--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Electrodomésticos - HTML Ecommerce Template</title>
+		<title>Electro - HTML Ecommerce Template</title>
 
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -42,8 +42,8 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="https://wa.me/5358956749"><i class="fa fa-phone"></i> +5358956749</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> dvxandco@gmail.com</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
 						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 					</ul>
 					<ul class="header-links pull-right">
@@ -76,10 +76,10 @@
 								<form>
 									<select class="input-select">
 										<option value="0">Todas</option>
-										<option value="1">Categoría 01</option>
-										<option value="1">Categoría 02</option>
+										<option value="1">Category 01</option>
+										<option value="1">Category 02</option>
 									</select>
-									<input class="input" placeholder="Busca aquí...">
+									<input class="input" placeholder="Buscar aquí...">
 									<button class="search-btn">Búsqueda</button>
 								</form>
 							</div>
@@ -131,12 +131,12 @@
 											</div>
 										</div>
 										<div class="cart-summary">
-											<small>3 Articulo(s) seleccionados</small>
+											<small>3 Item(s) selected</small>
 											<h5>SUBTOTAL: $2940.00</h5>
 										</div>
 										<div class="cart-btns">
 											<a href="#">Ver Carrito</a>
-											<a href="#">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
+											<a href="#">Comprar<i class="fa fa-arrow-circle-right"></i></a>
 										</div>
 									</div>
 								</div>
@@ -170,13 +170,10 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Hot Deals</a></li>
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li><a href="/">Inicio</a></li>
+						<li><a href="#">Tienda</a></li>
+						<li><a href="#">Ofertas</a></li>
+						<li><a href="#">Categorías</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -193,10 +190,10 @@
 				<!-- row -->
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="breadcrumb-header">Regular Page</h3>
+						<h3 class="breadcrumb-header">Acceder</h3>
 						<ul class="breadcrumb-tree">
-							<li><a href="#">Home</a></li>
-							<li class="active">Blank</li>
+							<li><a href="#">Inicio</a></li>
+							<li class="active">Acceder</li>
 						</ul>
 					</div>
 				</div>
@@ -255,7 +252,7 @@
 						<div class="newsletter">
 							<p>Regístrate para las <strong>NOTICIAS</strong></p></strong></p>
 							<form>
-								<input class="input" type="email" placeholder="Enter Your Email">
+								<input class="input" type="email" placeholder="Entra tu Email">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Suscríbete</button>
 							</form>
 							<ul class="newsletter-follow">
@@ -281,7 +278,7 @@
 		</div>
 		<!-- /NEWSLETTER -->
 
-		<!-- FOOTER -->
+	<!-- FOOTER -->
 		<footer id="footer">
 			<!-- top footer -->
 			<div class="section">
@@ -365,8 +362,6 @@
 								Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados | Esta plantilla está hecha con <i class="fa fa-heart-o" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Colorlib</a>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</span>
-
-
 						</div>
 					</div>
 						<!-- /row -->
@@ -384,7 +379,6 @@
 		<script src="js/nouislider.min.js"></script>
 		<script src="js/jquery.zoom.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/nostra.js"></script>
 
 	</body>
 </html>
