--- a/checkout.html
+++ b/checkout.html
@@ -249,7 +249,7 @@
 									</label>
 									<div class="caption">
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-										<input class="input" type="password" name="password" placeholder="Enter Your Password">
+										<input class="input" type="password" name="password" placeholder="Entra tu Password">
 									</div>
 								</div>
 							</div>
@@ -392,7 +392,7 @@
 						<div class="newsletter">
 							<p>Regístrate para las <strong>NOTICIAS</strong></p></strong></p>
 							<form>
-								<input class="input" type="email" placeholder="Enter Your Email">
+								<input class="input" type="email" placeholder="Entra tu Email">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Suscríbete</button>
 							</form>
 							<ul class="newsletter-follow">
