--- a/product.html
+++ b/product.html
@@ -694,7 +694,7 @@
 						<div class="newsletter">
 							<p>Regístrate para las <strong>NOTICIAS</strong></p></strong></p>
 							<form>
-								<input class="input" type="email" placeholder="Enter Your Email">
+								<input class="input" type="email" placeholder="Entra tu Email">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Suscríbete</button>
 							</form>
 							<ul class="newsletter-follow">
