--- a/wishlist.html
+++ b/wishlist.html
@@ -226,7 +226,7 @@
 						<div class="newsletter">
 							<p>Regístrate para las <strong>NOTICIAS</strong></p></strong></p>
 							<form>
-								<input class="input" type="email" placeholder="Entra tu Email">
+								<input class="input" type="email" placeholder="Enter Your Email">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Suscríbete</button>
 							</form>
 							<ul class="newsletter-follow">
