--- a/store/checkout.html
+++ b/store/checkout.html
@@ -12,20 +12,20 @@
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="/store/css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="./static/css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="/store/css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="/store/css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="./static/css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="./static/css/slick-theme.css"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="/store/css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="./static/css/nouislider.min.css"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="/store/css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="./static/css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="/store/css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="./static/css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,7 +64,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="/" class="logo">
-									<img src="/store/img/logo.png" alt="">
+									<img src="./static/img/logo.png" alt="">
 								</a>
 							</div>
 						</div>
@@ -110,7 +110,7 @@
 										<div class="cart-list">
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="/store/img/product01.png" alt="">
+													<img src="./static/img/product01.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -121,7 +121,7 @@
 
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="/store/img/product02.png" alt="">
+													<img src="./static/img/product02.png" alt="">
 												</div>
 												<div class="product-body">
 													<h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -513,13 +513,13 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="/store/js/jquery.min.js"></script>
-		<script src="/store/js/bootstrap.min.js"></script>
-		<script src="/store/js/slick.min.js"></script>
-		<script src="/store/js/nouislider.min.js"></script>
-		<script src="/store/js/jquery.zoom.min.js"></script>
-		<script src="/store/js/main.js"></script>
-		<script src="/store/js/nostra.js"></script>
+		<script src="./static/js/jquery.min.js"></script>
+		<script src="./static/js/bootstrap.min.js"></script>
+		<script src="./static/js/slick.min.js"></script>
+		<script src="./static/js/nouislider.min.js"></script>
+		<script src="./static/js/jquery.zoom.min.js"></script>
+		<script src="./static/js/main.js"></script>
+		<script src="./static/js/nostra.js"></script>
 
 	</body>
 </html>
