cambios menores en idioma y esas cosas

--- a/admin_files/login.html
+++ b/admin_files/login.html
@@ -169,13 +169,10 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Hot Deals</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">Laptops</a></li>
-            <li><a href="#">Smartphones</a></li>
-            <li><a href="#">Cameras</a></li>
-            <li><a href="#">Accessories</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="./store_files/store.html">Tienda</a></li>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Categorías</a></li>
           </ul>
           <!-- /NAV -->
         </div>
