--- a/store_files/checkout.html
+++ b/store_files/checkout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Electrodomésticos - HTML Ecommerce Template</title>
+    <title>Checkout | Electrodomésticos</title>
 
      <!-- Google font -->
      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -192,7 +192,7 @@
           <div class="col-md-12">
             <h3 class="breadcrumb-header">Checkout</h3>
             <ul class="breadcrumb-tree">
-              <li><a href="#">Home</a></li>
+              <li><a href="/">Inicio</a></li>
               <li class="active">Checkout</li>
             </ul>
           </div>
