--- a/store_files/product.html
+++ b/store_files/product.html
@@ -190,11 +190,11 @@
         <!-- row -->
         <div class="row">
           <div class="col-md-12">
-            <ul class="breadcrumb-tree">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">All Categories</a></li>
-              <li><a href="#">Accessories</a></li>
-              <li><a href="#">Headphones</a></li>
+            <ul class="main-nav nav navbar-nav">
+              <li><a href="/">Inicio</a></li>
+              <li><a href="./store_files/store.html">Tienda</a></li>
+              <li><a href="#">Ofertas</a></li>
+              <li><a href="#">Categorías</a></li>
               <li class="active">Product name goes here</li>
             </ul>
           </div>
