--- a/store_files/wishlist.html
+++ b/store_files/wishlist.html
@@ -192,7 +192,7 @@
           <div class="col-md-12">
             <h3 class="breadcrumb-header">Lista de Deseados</h3>
             <ul class="breadcrumb-tree">
-              <li><a href="#">Home</a></li>
+              <li><a href="/">Inicio</a></li>
               <li class="active">Lista de Deseados</li>
             </ul>
           </div>
