--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Acceder | Electrodomésticos</title>
+    <title>Inicio | Electrodomésticos</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/bootstrap.min.css"/>
 
     <!-- Slick -->
-    <link type="text/css" rel="stylesheet" href="../static/css/slick.css"/>
-    <link type="text/css" rel="stylesheet" href="../static/css/slick-theme.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/slick.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/slick-theme.css"/>
 
     <!-- nouislider -->
-    <link type="text/css" rel="stylesheet" href="../static/css/nouislider.min.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/nouislider.min.css"/>
 
     <!-- Font Awesome Icon -->
-    <link rel="stylesheet" href="../static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./static/css/font-awesome.min.css">
 
     <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="../static/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="./static/css/style.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +48,7 @@
           </ul>
           <ul class="header-links pull-right">
             <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-            <li><a href="/login/"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
+            <li><a href="./store_files/login.html"><i class="fa fa-user-o"></i> Mi Cuenta</a></li>
           </ul>
         </div>
       </div>
@@ -64,7 +64,7 @@
             <div class="col-md-3">
               <div class="header-logo">
                 <a href="/" class="logo">
-                  <img src="../static/img/logo.png" alt="Logo de la empresa">
+                  <img src="./static/img/logo.png" alt="Logo de la empresa">
                 </a>
               </div>
             </div>
@@ -91,7 +91,7 @@
               <div class="header-ctn">
                 <!-- Wishlist -->
                 <div class="wishlist">
-                  <a href="/wishlist/">
+                  <a href="./store_files/wishlist.html">
                     <i class="fa fa-heart-o"></i>
                     <span>Deseados</span>
                     <div class="qty">2</div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="cart-btns">
                       <a href="#">Ver Carrito</a>
-                      <a href="/checkout/">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
+                      <a href="./store_files/checkout.html">Comprar  <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
             <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="/store/">Tienda</a></li>
+            <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
           </ul>
