cambios pequeños de paridad

--- a/admin_files/login.html
+++ b/admin_files/login.html
@@ -169,7 +169,7 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li><a href="/">Inicio</a></li>
+            <li><a href="/electronicstore/">Inicio</a></li>
             <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
@@ -191,7 +191,7 @@
           <div class="col-md-12">
             <h3 class="breadcrumb-header">Acceder</h3>
             <ul class="breadcrumb-tree">
-              <li><a href="#">Inicio</a></li>
+              <li><a href="/electronicstore/">Inicio</a></li>
               <li class="active">Acceder</li>
             </ul>
           </div>
