--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li class="active"><a href="/">Inicio</a></li>
+            <li class="active"><a href="/electronicstore/">Inicio</a></li>
             <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
