--- a/store_files/blank.html
+++ b/store_files/blank.html
@@ -169,7 +169,7 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li class="active"><a href="/">Inicio</a></li>
+            <li class="active"><a href="/electronicstore/">Inicio</a></li>
             <li><a href="#">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
@@ -191,7 +191,7 @@
           <div class="col-md-12">
             <h3 class="breadcrumb-header">Página Regular</h3>
             <ul class="breadcrumb-tree">
-              <li><a href="/">Inicio</a></li>
+              <li><a href="/electronicstore/">Inicio</a></li>
               <li class="active">Blank</li>
             </ul>
           </div>
