--- a/store_files/checkout.html
+++ b/store_files/checkout.html
@@ -170,8 +170,8 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="#">Tienda</a></li>
+            <li><a href="/electronicstore/">Inicio</a></li>
+            <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
           </ul>
@@ -192,7 +192,7 @@
           <div class="col-md-12">
             <h3 class="breadcrumb-header">Checkout</h3>
             <ul class="breadcrumb-tree">
-              <li><a href="/">Inicio</a></li>
+              <li><a href="/electronicstore/">Inicio</a></li>
               <li class="active">Checkout</li>
             </ul>
           </div>
