--- a/store_files/store.html
+++ b/store_files/store.html
@@ -170,8 +170,8 @@
         <div id="responsive-nav">
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
-            <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="#">Tienda</a></li>
+            <li class="active"><a href="/electronicstore/">Inicio</a></li>
+            <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
           </ul>
@@ -191,11 +191,8 @@
         <div class="row">
           <div class="col-md-12">
             <ul class="main-nav nav navbar-nav">
-              <li><a href="/">Inicio</a></li>
-              <li class="active"><a href="./store_files/store.html">Tienda</a></li>
-              <li><a href="#">Ofertas</a></li>
-              <li><a href="#">Categorías</a></li>
-              <li>Product name goes here</li>
+              <li><a href="/electronicstore/">Inicio</a></li>
+              <li>Tienda</li>
             </ul>
           </div>
         </div>
