--- a/store_files/wishlist.html
+++ b/store_files/wishlist.html
@@ -171,7 +171,7 @@
           <!-- NAV -->
           <ul class="main-nav nav navbar-nav">
             <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="#">Tienda</a></li>
+            <li><a href="./store_files/store.html">Tienda</a></li>
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Categorías</a></li>
           </ul>
